Adicionando o primeiro teste de validacao do controller

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,26 @@
 {
     "cSpell.words": [
+        "armazenados",
         "automação",
+        "consulta",
+        "destinatario",
         "favorecido",
         "favorecidos",
+        "inexistentes",
+        "informo",
+        "jesi",
+        "marcação",
+        "memória",
+        "permite",
+        "pgats",
+        "recebo",
+        "registro",
+        "remetente",
+        "resposta",
         "transferência",
         "transferências",
-        "usuário"
+        "usuário",
+        "usuários",
+        "valores"
     ]
 }
