--- a/package.json
+++ b/package.json
@@ -4,14 +4,18 @@
   "description": "Esta API permite registro, login, consulta de usuários, marcação de favorecidos e transferência de valores entre usuários. Os dados são armazenados em memória.",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha 'test/**/*.test.js' --timeout 10000",
     "start": "node server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^5.2.1",
     "express": "^5.1.0",
+    "mocha": "^11.7.1",
+    "sinon": "^21.0.0",
+    "supertest": "^7.1.4",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
